// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`marginRight renders 0 1`] = `
Array [
  .c0 {
  margin-right: 0;
}

<div
    className="c0"
  />,
  .c0 {
  margin-right: 0;
}

<div
    className="c0"
  />,
  .c0 {
  margin-right: 0;
}

<div
    className="c0"
  />,
  .c0 {
  margin-right: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`marginRight renders function 1`] = `
Array [
  .c0 {
  margin-right: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  margin-right: has;
}

<div
    className="c0"
  />,
  .c0 {
  margin-right: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  margin-right: has;
}

<div
    className="c0"
  />,
]
`;

exports[`marginRight renders invalid theme path 1`] = `
Array [
  .c0 {
  margin-right: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  margin-right: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  margin-right: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  margin-right: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`marginRight renders negative number 1`] = `
Array [
  .c0 {
  margin-right: -54881px;
}

<div
    className="c0"
  />,
  .c0 {
  margin-right: -54881px;
}

<div
    className="c0"
  />,
  .c0 {
  margin-right: -42365px;
}

<div
    className="c0"
  />,
  .c0 {
  margin-right: -42365px;
}

<div
    className="c0"
  />,
]
`;

exports[`marginRight renders object [breakpoints + standard] 1`] = `
Array [
  .c0 {
  margin-right: July;
}

@media screen and (min-width:November) {
  .c0 {
    margin-right: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    margin-right: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    margin-right: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    margin-right: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  margin-right: July;
}

@media screen and (min-width:November) {
  .c0 {
    margin-right: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    margin-right: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    margin-right: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    margin-right: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  margin-right: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    margin-right: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    margin-right: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    margin-right: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    margin-right: June;
  }
}

<div
    className="c0"
  />,
  .c0 {
  margin-right: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    margin-right: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    margin-right: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    margin-right: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    margin-right: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`marginRight renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    margin-right: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    margin-right: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    margin-right: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    margin-right: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    margin-right: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    margin-right: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    margin-right: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    margin-right: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    margin-right: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    margin-right: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    margin-right: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    margin-right: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    margin-right: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    margin-right: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    margin-right: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    margin-right: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`marginRight renders object [mediaQueries + standart] 1`] = `
Array [
  .c0 {
  margin-right: July;
}

@media May {
  .c0 {
    margin-right: August;
  }
}

@media April {
  .c0 {
    margin-right: September;
  }
}

@media January {
  .c0 {
    margin-right: November;
  }
}

@media April {
  .c0 {
    margin-right: August;
  }
}

@media June {
  .c0 {
    margin-right: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  margin-right: July;
}

@media May {
  .c0 {
    margin-right: August;
  }
}

@media April {
  .c0 {
    margin-right: September;
  }
}

@media January {
  .c0 {
    margin-right: November;
  }
}

@media April {
  .c0 {
    margin-right: August;
  }
}

@media June {
  .c0 {
    margin-right: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  margin-right: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    margin-right: November;
  }
}

@media April {
  .c0 {
    margin-right: January;
  }
}

@media January {
  .c0 {
    margin-right: December;
  }
}

@media April {
  .c0 {
    margin-right: April;
  }
}

@media June {
  .c0 {
    margin-right: May;
  }
}

<div
    className="c0"
  />,
  .c0 {
  margin-right: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    margin-right: November;
  }
}

@media April {
  .c0 {
    margin-right: January;
  }
}

@media January {
  .c0 {
    margin-right: December;
  }
}

@media April {
  .c0 {
    margin-right: April;
  }
}

@media June {
  .c0 {
    margin-right: May;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`marginRight renders object [mediaQueries] 1`] = `
Array [
  @media May {
  .c0 {
    margin-right: July;
  }
}

@media April {
  .c0 {
    margin-right: August;
  }
}

@media January {
  .c0 {
    margin-right: September;
  }
}

@media April {
  .c0 {
    margin-right: November;
  }
}

@media June {
  .c0 {
    margin-right: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    margin-right: July;
  }
}

@media April {
  .c0 {
    margin-right: August;
  }
}

@media January {
  .c0 {
    margin-right: September;
  }
}

@media April {
  .c0 {
    margin-right: November;
  }
}

@media June {
  .c0 {
    margin-right: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    margin-right: January;
  }
}

@media April {
  .c0 {
    margin-right: December;
  }
}

@media January {
  .c0 {
    margin-right: April;
  }
}

@media April {
  .c0 {
    margin-right: May;
  }
}

@media June {
  .c0 {
    margin-right: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    margin-right: January;
  }
}

@media April {
  .c0 {
    margin-right: December;
  }
}

@media January {
  .c0 {
    margin-right: April;
  }
}

@media April {
  .c0 {
    margin-right: May;
  }
}

@media June {
  .c0 {
    margin-right: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`marginRight renders postitive number 1`] = `
Array [
  .c0 {
  margin-right: 54881px;
}

<div
    className="c0"
  />,
  .c0 {
  margin-right: 54881px;
}

<div
    className="c0"
  />,
  .c0 {
  margin-right: 42365px;
}

<div
    className="c0"
  />,
  .c0 {
  margin-right: 42365px;
}

<div
    className="c0"
  />,
]
`;

exports[`marginRight renders string 1`] = `
Array [
  .c0 {
  margin-right: July;
}

<div
    className="c0"
  />,
  .c0 {
  margin-right: July;
}

<div
    className="c0"
  />,
  .c0 {
  margin-right: June;
}

<div
    className="c0"
  />,
  .c0 {
  margin-right: June;
}

<div
    className="c0"
  />,
]
`;

exports[`marginRight renders undefined 1`] = `
Array [
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
]
`;

exports[`marginRight renders valid theme path 1`] = `
Array [
  .c0 {
  margin-right: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  margin-right: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  margin-right: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  margin-right: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
